--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<spring-cloud-version>2021.0.3</spring-cloud-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -71,9 +72,27 @@
     <version>3.12.0</version>
 </dependency>
    		 
-
+ <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+    
 	</dependencies>
-
+<dependencyManagement>
+        <dependencies>
+            <dependency>
+<!--                Integrate the spring cloud module-->
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+<!--                <version>2.1.2.RELEASE</version>-->
+                <version>${spring-cloud-version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    
+    
 	<build>
 		<plugins>
 			<plugin>
