--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-exception=true
 server.error.include-stacktrace=always
-
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 #server:
