--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ server.error.include-stacktrace=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+#An error message is displayed if the name contains numbers or special characters
+regex.name=^[a-z ,.'-]+$
 
 #server:
 #  port: 8080
