main: amend controller/AirportController.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,11 @@ spring.jpa.hibernate.ddl-auto=update
 #An error message is displayed if the name contains numbers or special characters
 regex.name=^[a-z ,.'-]+$
 
+#prefix
+airport.prefix=A
+plane.prefix=R
+schedule.prefix=S
+
 #server:
 #  port: 8080
 #spring:
