--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+	 <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
+
+      </dependency>
+      
 		<!-- spring security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
