--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=a-bootiful-client
 server.port=9301
-#mysql\u914D\u7F6E
+#mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/VLSDB
 spring.datasource.username=root
 spring.datasource.password=mysql
 
 #spring.jpa.properties.hibernate.hbm2ddl.auto=update
-#\u5C55\u793Asql\uFF08\u8C03\u8BD5\u6216\u8005\u6392\u67E5\u95EE\u9898\u65F6\u5019\u5F88\u6709\u7528\uFF09
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-exception=true
@@ -16,29 +15,15 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
 #An error message is displayed if the name contains numbers or special characters
-regex.name=^[a-z ,.'-]+$
+regex.name=^[a-zA-Z ,.'-]*$
 
 #prefix
 airport.prefix=A
 plane.prefix=R
 schedule.prefix=S
+booking.prefix=B
+passenger.prefix=G
 
-#server:
-#  port: 8080
-#spring:
-#  datasource:
-#    driverClassName: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/VLSDB
-#    username: root
-#    password: mysql
-#  jpa:
-#    show-sql: true # 默认false，在日志里显示执行的sql语句
-#    database: mysql
-#    hibernate.ddl-auto: update #指定为update，每次启动项目检测表结构有变化的时候会新增字段，表不存在时会新建，如果指定create，则每次启动项目都会清空数据并删除表，再新建
-#    properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
-#    database-platform: org.hibernate.dialect.MySQL5Dialect
-#    hibernate:
- #     naming:
-#        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl #指定jpa的自动表生成策略，驼峰自动映射为下划线格式
-        #physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#
+#login
+max.try.count=3
+invalid.login.disabled.minutes=30
