--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=a-bootiful-client
+#spring.application.name=a-bootiful-client
 server.port=8888
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -28,4 +28,4 @@ passenger.prefix=G
 max.try.count=3
 invalid.login.disabled.minutes=30
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
